[package]
name = "misaki"
version = "0.1.0"
authors = ["haze <admin@haze.pw>"]

[dependencies]
misaki_api = { path = "api" }
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
math-text-transform = "0.1.1"
sharedlib = "7.0.0"
glob = "0.2.11"
eval = "0.4.0"
rusqlite = "0.12.0"
rand = "0.3.16"
curl = "0.4.8"